kustomizations/boilerplate/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kustomize-default
  namespace: ""
  labels:
    app: ""
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ""
        app: ""
    spec:
      containers:
      - name: "" 
        image: ""
        imagePullPolicy: "Always"
        volumeMounts:
      volumes:
