kustomizations/boilerplate/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kustomize-default
  namespace: ""
spec:
  selector:
    app: ""
  ports:
  - name: http
    targetPort: 0
    port: 0
